# crewai_fake_news_detector

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sample_batch_2_rows.csv  sample_batch_archive.csv
src/detector_fake_news/: __init__.py  article_fetcher.py  classifier.py  contradictions.py  crew.py  diagnostics.py  evidence_quality.py  history.py  llm.py  main.py  memory.py  models.py  reporting.py  runtime.py  service.py  ui.py  ui_helpers.py
src/detector_fake_news/config/: agents.yaml  tasks.yaml
src/detector_fake_news/tools/: __init__.py  research.py
tests/: test_diagnostics.py  test_helpers.py  test_service_outputs.py  test_ui_helpers.py
